kubernetes/wisecow/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
  namespace: accuknox
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
    - name: http-wisecow
      protocol: TCP
      port: 80
      targetPort: http
