kubernetes/wisecow/ingress.yaml
# If this was a production environment, I would have used something like
# sealed-secrets to encrypt this secret before adding it to git.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: accuknox
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - wisecow.murtazau.xyz
    secretName: wisecow-cert
  rules:
  - host: wisecow.murtazau.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-svc
            port:
              number: 80
